@@ -1,4 +1,9 @@
-* ABI compat in the lib for hard-wired MX linking requirements
+* reorder the API compat wrappers into constants, types and then functions,
+  and find a way to make it work for both myriexpress.h and mx_extensions.h
+* add the prototypes of all wrapped functions
+* make the mx_get_info wrapper an actual function in omx__mx_api.c
+  so that there is no static inline in the wrapper anymore and we
+  can implement a real ABI compat
 
 * free request (and buffers) on close
   + preallocated pool with free list
